# wheel2deb_simple

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
src/: wheel2deb.py  wheel2deb_simple.py
src/_wheel2deb_simple/: apt.py  context.py  debian.py  depends.py  version.py
