[metadata]
name = wheel2deb_simple
description = wheel2deb_simple: python wheel to debian package converter
long_description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/kazuto28/wheel2deb_simple/
project_urls =
	Source=https://github.com/kazuto28/wheel2deb_simple
	Tracker=https://github.com/kazuto28/wheel2deb_simple/issues
author = kazuto28
license = MIT license
license_file = LICENSE
keywords = debian, package, converter
classifiers =
	Development Status :: 6 - Mature
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Topic :: Utilities
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
platforms = linux

[options]
zip_safe = no
packages = _wheel2deb_simple
py_modules = wheel2deb_simple
python_requires = !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
	wheel2deb-simple=wheel2deb_simple:main

[check-manifest]
ignore = _wheel2deb_simple/version.py
